Correct alignment of scroll in tower view etc

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -146,7 +146,7 @@ $background-grey: #333333;
     background: transparent;
     height: auto;
     margin-top: 50px;
-    transition: transform 0.25s linear 0.5s;
+    transition: transform 0.5s ease 0s;
 
     svg {
         // margin-top: 100px;
@@ -205,6 +205,7 @@ $background-grey: #333333;
     @include mq(tablet) {
         bottom: auto;
         top: 100px;
+        display: none;
     }
 
     .gv-tower-graphic-intro-inner {
